# machinelearninginaction

./: .gitignore  NOTES.md  kNN.py
Ch03/: trees.py
ch02-knn/: README.md  ch02-knn.cabal  stack.yaml
ch02-knn/lib/Ch02KNN/: Classify0.hs
ch02-knn/script/: env.cmd
ch02-knn/spec/: Classify0Spec.hs  DataFiles.hs
ch02-knn/src/: Main.hs
ch03-decision-trees/: README.md  ch03-decision-trees.cabal
ch03-decision-trees/lib/Ch03DecisionTrees/: Entropy.hs  Foo.hs
ch03-decision-trees/script/: test
ch03-decision-trees/spec/: EntropySpec.hs  FooSpec.hs
ch03-decision-trees/src/: DataFiles.hs  Main.hs
charts/: .gitignore  charts.cabal
charts/src/: Main.hs  Main.lhs
charts2/: charts2.cabal
charts2/src/: Main.hs
knn/: .gitignore  README.md  knn.cabal  stack.yaml
knn/lib/: LAUtil.hs
knn/lib/KNN/: Classify0.hs
knn/lib/LAUtil/: Arithmetic.hs  Charting.hs  Convert.hs  Data.hs  Sorting.hs
knn/script/: env.ps1  get-lapack-path.sh
knn/spec/: Classify0Spec.hs
knn/src/: Charting.hs  Main.hs
lautil/: README.md  lautil.cabal  stack.yaml
lautil/src/: LAUtil.hs
lautil/src/LAUtil/: Charting.hs  Folding.hs  LabelledMatrix.hs  Normalization.hs  ScatterPlot.hs  Sorting.hs
mlalgs/: README.md  mlalgs.cabal  stack.yaml
mlalgs/data/: datingTestSet.txt  datingTestSet2.txt
mlalgs/lib/MLAlgs/: Classify0.hs
mlalgs/spec/: Classify0Spec.hs  DataFiles.hs
mlalgs/src/: Main.hs
mlutil/: LICENSE  README.md  mlutil.cabal
mlutil/doctest/: Main.hs
mlutil/spec/: ArithmeticSpec.hs  Expectations.hs  FoldingSpec.hs  LabelledMatrixSpec.hs  NormalizationSpec.hs  RoundableSpec.hs  SortingSpec.hs
mlutil/src/: MLUtil.hs
mlutil/src/MLUtil/: Arithmetic.hs  Charting.hs  Folding.hs  Imports.hs  LabelledMatrix.hs  LabelledMatrixPlot.hs  Normalization.hs  RRScatterPlot.hs  Roundable.hs  Sorting.hs  Test.hs  Util.hs
mlutil/src/MLUtil/Test/: Expectations.hs
script/: test
