name:                         ch02-knn
version:                      0.1.0.0
synopsis:                     Machine Learning in Action: k-nearest neighbours
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlalgs#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10
data-dir:                     data
data-files:                   datingTestSet.txt
                            , datingTestSet2.txt

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            Ch02KNN.Classify0
  build-depends:              base
                            , containers
                            , mlutil
                            , vector

executable ch02-knn-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  other-modules:              DataFiles
                            , Paths_ch02_knn
  build-depends:              base
                            , ch02-knn
                            , containers
                            , directory
                            , filepath
                            , hmatrix
                            , mlutil
                            , split
                            , strict
                            , vector

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              Classify0Spec
                            , DataFiles
                            , Paths_ch02_knn
  build-depends:              base
                            , ch02-knn
                            , containers
                            , hspec
                            , mlutil
                            , vector
