name:                         ch03-decision-trees
version:                      0.1.0.0
synopsis:                     Machine Learning in Action: decision trees
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlutil#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            Ch03DecisionTrees.Entropy
  build-depends:              base
                            , containers

executable ch03-decision-trees-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  other-modules:              DataFiles
                            , Paths_ch03_decision_trees
  build-depends:              base
                            , ch03-decision-trees

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              EntropySpec
                            , DataFiles
                            , Paths_ch03_decision_trees
  build-depends:              base
                            , ch03-decision-trees
                            , hspec
                            , mlutil
