name:                charts
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/rcook/charts#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2016 Richard Cook
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable charts
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:        SVGFonts
                      , base >= 4.7 && < 5
                      , diagrams-lib
                      , diagrams-svg
