name:                knn
version:             0.1.0.0
synopsis:            k-Nearest-Neighbours Algorithm
description:         Please see README.md
homepage:            https://github.com/rcook/knn#readme
license:             MIT
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2016 Richard Cook
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:       lib
  default-language:     Haskell2010
  exposed-modules:      LAUtil
                      , LAUtil.Arithmetic
                      , LAUtil.Charting
                      , LAUtil.Convert
                      , LAUtil.Data
                      , LAUtil.Sorting
  build-depends:        base
                      , directory
                      , easyplot
                      , hmatrix
                      , process
                      , temporary
                      , vector
                      , vector-algorithms

executable knn-app
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , hmatrix
                      , knn
                      , vector
