name:                         knn
version:                      0.1.0.0
synopsis:                     k-Nearest-Neighbours Algorithm
description:                  Please see README.md
homepage:                     https://github.com/rcook/knn#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            KNN.Classify0
  build-depends:              base
                            , containers
                            , mlutil
                            , vector

executable knn-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  build-depends:              base
                            , containers
                            , hmatrix
                            , knn
                            , mlutil
                            , vector

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  build-depends:              base
                            , hspec
                            , knn
