name:                         lautil
version:                      0.1.0.0
synopsis:                     Linear algebra helpers
description:                  Please see README.md
homepage:                     https://github.com/rcook/lautil#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10

library
  if os(linux)
    cpp-options:              -DOS_Linux
  if os(windows)
    cpp-options:              -DOS_Windows
  if os(darwin)
    cpp-options:              -DOS_OSX
  hs-source-dirs:             src
  default-language:           Haskell2010
  exposed-modules:            LAUtil
                            , LAUtil.Arithmetic
                            , LAUtil.Charting
                            , LAUtil.Convert
                            , LAUtil.Data
                            , LAUtil.LabelledMatrix
                            , LAUtil.ScatterPlot
                            , LAUtil.Sorting
  build-depends:              Chart
                            , base
                            , containers
                            , directory
                            , easyplot
                            , hmatrix
                            , process
                            , split
                            , temporary
                            , vector
                            , vector-algorithms
