name:                         mlalgs
version:                      0.1.0.0
synopsis:                     Basic machine learning algorithms
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlalgs#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10
data-dir:                     data
data-files:                   datingTestSet.txt
                            , datingTestSet2.txt

library
  hs-source-dirs:             lib
  default-language:           Haskell2010
  exposed-modules:            MLAlgs.Classify0
  build-depends:              base
                            , containers
                            , mlutil
                            , vector

executable mlalgs-app
  hs-source-dirs:             src
  main-is:                    Main.hs
  default-language:           Haskell2010
  other-modules:              DataFiles
                            , Paths_mlalgs
  build-depends:              base
                            , containers
                            , directory
                            , filepath
                            , hmatrix
                            , mlalgs
                            , mlutil
                            , split
                            , strict
                            , vector

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              Classify0Spec
                            , DataFiles
                            , Paths_mlalgs
  build-depends:              base
                            , containers
                            , hspec
                            , mlalgs
                            , mlutil
                            , vector
