name:                         mlutil
version:                      0.1.0.0
synopsis:                     Utility functions for machine learning
description:                  Please see README.md
homepage:                     https://github.com/rcook/mlutil#readme
license:                      MIT
license-file:                 LICENSE
author:                       Richard Cook
maintainer:                   rcook@rcook.org
copyright:                    2016 Richard Cook
category:                     Web
build-type:                   Simple
cabal-version:                >=1.10

library
  if os(linux)
    cpp-options:              -DOS_Linux
  if os(windows)
    cpp-options:              -DOS_Windows
  if os(darwin)
    cpp-options:              -DOS_OSX
  hs-source-dirs:             src
  default-language:           Haskell2010
  exposed-modules:            MLUtil
                            , MLUtil.Arithmetic
                            , MLUtil.Charting
                            , MLUtil.Folding
                            , MLUtil.Imports
                            , MLUtil.LabelledMatrix
                            , MLUtil.LabelledMatrixPlot
                            , MLUtil.Normalization
                            , MLUtil.RRScatterPlot
                            , MLUtil.Roundable
                            , MLUtil.Sorting
                            , MLUtil.Test
                            , MLUtil.Test.Expectations
                            , MLUtil.Util
  build-depends:              Chart
                            , Chart-diagrams
                            , base
                            , containers
                            , directory
                            , hmatrix
                            , hspec
                            , process
                            , split
                            , temporary
                            , vector
                            , vector-algorithms

test-suite spec
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             spec
  default-language:           Haskell2010
  main-is:                    Spec.hs
  other-modules:              ArithmeticSpec
                            , FoldingSpec
                            , LabelledMatrixSpec
                            , NormalizationSpec
                            , RoundableSpec
                            , SortingSpec
  build-depends:              base
                            , containers
                            , hspec
                            , mlutil
                            , vector

test-suite doctest
  type:                       exitcode-stdio-1.0
  hs-source-dirs:             doctest
  default-language:           Haskell2010
  main-is:                    Main.hs
  build-depends:              Glob
                            , base
                            , doctest
